Bug 76112 - [EFL][WK2] Network is not available when SOUP is enabled.
Summary: [EFL][WK2] Network is not available when SOUP is enabled.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ryuan Choi
URL:
Keywords:
Depends on:
Blocks: 61838
  Show dependency treegraph
 
Reported: 2012-01-11 15:54 PST by Ryuan Choi
Modified: 2012-01-12 02:08 PST (History)
1 user (show)

See Also:


Attachments
Patch (1.30 KB, patch)
2012-01-11 15:57 PST, Ryuan Choi
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ryuan Choi 2012-01-11 15:54:28 PST
For WebKit2/EFL to use glib based library such as SOUP,
ecore_main_loop_glib_integrate should be called.
Comment 1 Ryuan Choi 2012-01-11 15:57:56 PST
Created attachment 122114 [details]
Patch
Comment 2 Gyuyoung Kim 2012-01-11 18:05:40 PST
Comment on attachment 122114 [details]
Patch

LGTM.
Comment 3 WebKit Review Bot 2012-01-12 02:08:53 PST
Comment on attachment 122114 [details]
Patch

Clearing flags on attachment: 122114

Committed r104800: <http://trac.webkit.org/changeset/104800>
Comment 4 WebKit Review Bot 2012-01-12 02:08:57 PST
All reviewed patches have been landed.  Closing bug.