[EFL][WK2] Network is not available when SOUP is enabled. https://bugs.webkit.org/show_bug.cgi?id=76112

Reviewed by Andreas Kling.

ecore_main_loop_glib_integrate should be called to use glib based library
such as SOUP.

* WebProcess/efl/WebProcessMainEfl.cpp:
(WebKit::WebProcessMainEfl):


Canonical link: https://commits.webkit.org/92962@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104800 268f45cc-cd09-0410-ab3c-d52691b4dbfc