Source/WebKit2/WebProcess/efl/WebProcessMainEfl.cpp
@@ -54,6 +54,9 @@ WK_EXPORT int WebProcessMainEfl(int argc, char* argv[])
 
 #if ENABLE(GLIB_SUPPORT)
     g_type_init();
+
+    if (!ecore_main_loop_glib_integrate())
+        return 1;
 #endif
 
     JSC::initializeThreading();
